Add swag docs to handlers
